--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,13 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"Node",
+"class": &"GameMenus",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Game.gd"
+}, {
+"base": &"Sprite2D",
+"class": &"Player",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Player.gd"
+}])
